# mingwtinker

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  main.c
src/: Makefile.in  main.c
